Fixing remaining nav bugs

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body class="bg-tan">
     <div class="top-nav">
         <ul class="nav-ul">
-            <li class="ff-futura-cond-eb fs4"><a href="speakers-day-1.html">SPEAKERS</a></li>
+            <li class="ff-futura-cond-eb fs4"><a href="speakers.html">SPEAKERS</a></li>
             <li class="ff-futura-cond-eb fs4"><a href="schedule.html">SCHEDULE</a></li>
             <li class="ff-futura-cond-eb fs4 fc-orange"><a href="about.html">ABOUT</a></li>
             <li class="ff-anchorjack fs1 fc-black"><a href="index.html">High Rise</a></li>
