--- a/speakers.html
+++ b/speakers.html
@@ -18,7 +18,7 @@
 <body class="bg-tan">
    <div class="top-nav">
         <ul class="nav-ul">
-            <li class="fl-left ff-futura-cond-eb fs4"><a href="speakers.html">SPEAKERS</a></li>
+            <li class="fl-left ff-futura-cond-eb fs4 fc-orange"><a href="speakers.html">SPEAKERS</a></li>
             <li class="fl-left ff-futura-cond-eb fs4"><a href="schedule.html">SCHEDULE</a></li>
             <li class="fl-left ff-futura-cond-eb fs4"><a href="about.html">ABOUT</a></li>
             <li class="fl-left ff-anchorjack fs1 fc-black"><a href="index.html">High Rise</a></li>
@@ -38,7 +38,7 @@
         <ul class="expand bg-white fc-black">
             <li class="ff-futura-cond-eb fc-black fs4 hamburger-dropdowns"><a href="index.html">HOME</a>
             </li>
-            <li class="ff-futura-cond-eb fc-black fs4 hamburger-dropdowns"><a href="speakers.html">SPEAKERS</a>
+            <li class="ff-futura-cond-eb fc-black fs4 hamburger-dropdowns fc-orange"><a href="speakers.html">SPEAKERS</a>
             </li>
             <li class="ff-futura-cond-eb fc-black fs4 hamburger-dropdowns"><a href="schedule-day-1.html">SCHEDULE</a>
             </li>
