--- a/schedule-day-3.html
+++ b/schedule-day-3.html
@@ -4,6 +4,7 @@
     
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Rise</title>
     
     <link href="styles.css" rel="stylesheet" type="text/css">
