Making edits and fixing bugs

--- a/speakers.html
+++ b/speakers.html
@@ -363,15 +363,16 @@
             </div>
     
     <div class="footer">
+        <img class="aiga-logo fl-right" src="images/assets/header_logo_full@2x.png">
         <div class="social-wrapper">
             <ul>
-               <li><a href="https://www.instagram.com/aigadesign/"><img src="images/assets/instagram.png" alt="instgram icon" ></a></li>
+               <li><a href="https://www.instagram.com/aigadesign/"><img class="soc-icon" src="images/assets/instagram.png" alt="instagram icon" ></a></li>
 
-               <li><a href="https://www.facebook.com/AIGAdesign/"><img src="images/assets/facebook.png" alt="instgram icon" ></a></li>
+               <li><a href="https://www.facebook.com/AIGAdesign/"><img class="soc-icon" src="images/assets/facebook.png" alt="facebook icon" ></a></li>
 
-               <li><a href="https://twitter.com/AIGAdesign?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img    src="images/assets/twitter.png" alt="instgram icon" ></a></li>
+               <li><a href="https://twitter.com/AIGAdesign?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img class="soc-icon"    src="images/assets/twitter.png" alt="twitter icon" ></a></li>
 
-               <li><a href="https://www.linkedin.com/company-beta/14304/"><img src="images/assets/linkedin.png" alt="facebook icon" ></a></li>
+               <li><a href="https://www.linkedin.com/company-beta/14304/"><img class="soc-icon" src="images/assets/linkedin.png" alt="linkedin icon" ></a></li>
             </ul>
         </div>
         <p class="ta-center">&#x24B8; 2018 AIGA, THE PROFESSIONAL ASSOCIATION FOR DESIGN. ALL RIGHTS RESERVED.</p> 
